--- a/Views/Destinations/Index.cshtml
+++ b/Views/Destinations/Index.cshtml
@@ -1,7 +1,7 @@
 @model IEnumerable<Tourism.Models.Destination>
 @using Tourism.Models
 @{
-    ViewData["Title"] = "Destinations";
+    ViewData["Title"] = "Explore New Zealand";
     ViewData["Description"] = "Browse New Zealand destinations with search, filters, sorting, and paging.";
     ViewData["Keywords"] = "New Zealand destinations, filters, tourism, North Island, South Island";
     ViewData["OgImage"] = Url.Content("~/img/og-destinations.jpg");
